--- a/2018-fall/diff-eq.org
+++ b/2018-fall/diff-eq.org
@@ -1,11 +1,20 @@
-* Assignments [0/2]
-** TODO HW1 [0/3]
+* Assignments [0/4]
+** TODO HW1 [3/3]
    DEADLINE: <2018-08-29 Wed>
-   - [ ] 1.1: 3,4,6,11,14,15,22
-   - [ ] 1.2: 1(a),4,5,6,8
-   - [ ] 1.3: 2,3,6,7,10,12,17,19
+   - [X] 1.1: 3,4,6,11,14,15,22
+   - [X] 1.2: 1(a),4,5,6,8
+   - [X] 1.3: 2,3,6,7,10,12,17,19
 ** TODO HW2 [0/3]
    DEADLINE: <2018-09-05 Wed>
    - [ ] 2.1: 5,8,9,12,17,19
    - [ ] 2.2: 4,7,9,10,13,18,20
    - [ ] 2.3: 2,3,7,8,11,16
+** TODO HW3 [0/2]
+   DEADLINE: <2018-09-12Sat>
+   - [ ] 2.4:
+   - [ ] 2.5:
+* Quizzes [1/2]
+** DONE Quiz 1
+   CLOSED: [2018-09-10 Mon 14:08]
+** TODO Quiz 2
+   SCHEDULED: <2018-09-14 Fri>
