--- a/2018-fall/earth-science.org
+++ b/2018-fall/earth-science.org
@@ -1,5 +1,8 @@
-* Assignments [1/2]
+* Assignments [1/3]
 ** DONE HW1 Ch. 1 and 2 
    CLOSED: [2018-08-30 Thu 00:47] DEADLINE: <2018-09-01 Sat>
 ** TODO Lab 2 take-home
    DEADLINE:<2018-09-12 Wed>
+** TODO HW2 Ch. 3 
+   DEADLINE: <2018-09-15 Sat>
+
