--- a/2018-fall/diff-eq.org
+++ b/2018-fall/diff-eq.org
@@ -1,20 +1,64 @@
-* Assignments [0/4]
-** TODO HW1 [3/3]
-   DEADLINE: <2018-08-29 Wed>
-   - [X] 1.1: 3,4,6,11,14,15,22
-   - [X] 1.2: 1(a),4,5,6,8
-   - [X] 1.3: 2,3,6,7,10,12,17,19
-** TODO HW2 [0/3]
-   DEADLINE: <2018-09-05 Wed>
+* Assignments [6/9]
+** MISSED HW1 [0/3]
+   CLOSED: [2018-09-17 Mon 14:56] DEADLINE: <2018-08-29 Wed>
+   - State "MISSED"     from "TODO"       [2018-09-17 Mon 14:56]
+   - [ ] 1.1: 3,4,6,11,14,15,22
+   - [ ] 1.2: 1(a),4,5,6,8
+   - [ ] 1.3: 2,3,6,7,10,12,17,19
+** MISSED HW2 [0/3]
+   CLOSED: [2018-09-17 Mon 14:56] DEADLINE: <2018-09-05 Wed>
+   - State "MISSED"     from "TODO"       [2018-09-17 Mon 14:56]
    - [ ] 2.1: 5,8,9,12,17,19
    - [ ] 2.2: 4,7,9,10,13,18,20
    - [ ] 2.3: 2,3,7,8,11,16
-** TODO HW3 [0/2]
-   DEADLINE: <2018-09-12Sat>
+** DONE HW3 [0/2]
+   CLOSED: [2018-09-13 Thu 21:11] DEADLINE: <2018-09-12Sat>
    - [ ] 2.4:
    - [ ] 2.5:
-* Quizzes [1/2]
+** MISSED HW4
+   CLOSED: [2018-09-19 Wed 13:07] DEADLINE: <2018-09-19 Wed>
+   - State "MISSED"     from "TODO"       [2018-09-19 Wed 13:07]
+   - [ ] 2.7:
+   - [ ] 2.8:
+   - [ ] 3.1:
+** MISSED HW5
+   DEADLINE: <2018-09-26 Wed>
+   CLOSED: [2018-09-26 Wed 11:31]
+   - State "MISSED"     from              [2018-09-26 Wed 11:31]
+** MISSED HW6
+   CLOSED: [2018-10-05 Fri 12:31] DEADLINE: <2018-10-03 Wed>
+   - State "MISSED"     from "TODO"       [2018-10-05 Fri 12:31]
+** TODO HW7
+   DEADLINE: <2018-10-10 Wed>
+** TODO HW8
+   DEADLINE: <2018-10-17 Wed>
+** TODO HW9
+   DEADLINE: <2018-10-24 Wed>
+
+* Quizzes [3/3]
 ** DONE Quiz 1
    CLOSED: [2018-09-10 Mon 14:08]
-** TODO Quiz 2
-   SCHEDULED: <2018-09-14 Fri>
+** DONE Quiz 2
+   CLOSED: [2018-09-17 Mon 14:54] SCHEDULED: <2018-09-14 Fri>
+   - State "DONE"       from "TODO"       [2018-09-17 Mon 14:54]
+   - 2.2-2.5
+   - Mixing problem
+   - Separable equations
+   - Compound interest
+   - Autonomous equation 
+** DONE Quiz 3
+   CLOSED: [2018-10-05 Fri 12:30] SCHEDULED: <2018-10-05 Fri>
+
+   - State "DONE"       from "TODO"       [2018-10-05 Fri 12:30]
+* Exams [1/2]
+** DONE Midterm Exam 1
+   CLOSED: [2018-09-30 Sun 20:06] SCHEDULED: <2018-09-26 Wed>
+   - State "DONE"       from "TODO"       [2018-09-30 Sun 20:06]
+   - State "DONE"       from "TODO"       [2018-09-30 Sun 20:03]
+   - 1830 W290 CB
+   - closed book, no notes, no calc
+   - 49/60 81.67% :: 
+** TODO Midterm Exam 2
+   SCHEDULED: <2018-10-31 Wed>
+   - Chapters 3, 4, 6.1
+   - section 103
