--- a/2018-fall/earth-science.org
+++ b/2018-fall/earth-science.org
@@ -1,8 +1,46 @@
-* Assignments [1/3]
+* Assignments [7/10]
 ** DONE HW1 Ch. 1 and 2 
    CLOSED: [2018-08-30 Thu 00:47] DEADLINE: <2018-09-01 Sat>
-** TODO Lab 2 take-home
-   DEADLINE:<2018-09-12 Wed>
-** TODO HW2 Ch. 3 
-   DEADLINE: <2018-09-15 Sat>
+** DONE Lab 2 take-home
+   CLOSED: [2018-09-13 Thu 21:11] DEADLINE:<2018-09-12 Wed>
+** MISSED HW3 Ch. 3 
+   CLOSED: [2018-09-17 Mon 15:01] DEADLINE: <2018-09-15 Sat>
+   - State "MISSED"     from "TODO"       [2018-09-17 Mon 15:01]
+** DONE HW4 Ch. 7 
+   CLOSED: [2018-09-24 Mon 12:31] DEADLINE: <2018-09-22 Sat>
+
+   - State "DONE"       from "TODO"       [2018-09-24 Mon 12:31]
+** DONE HW5
+   CLOSED: [2018-09-30 Sun 18:48] DEADLINE: <2018-09-29 Sat>
+   - State "DONE"       from "TODO"       [2018-09-30 Sun 18:48]
+** DONE HW6
+   CLOSED: [2018-10-08 Mon 12:46] DEADLINE: <2018-10-06 Sat>
+   - State "DONE"       from "TODO"       [2018-10-08 Mon 12:46]
+** DONE HW7
+   CLOSED: [2018-10-15 Mon 12:26] DEADLINE: <2018-10-13 Sat>
+   - State "DONE"       from "TODO"       [2018-10-15 Mon 12:26]
+** TODO HW8
+   DEADLINE: <2018-10-20 Sat>
+** TODO HW9 
+   DEADLINE: <2018-10-27 Sat>
+
+** TODO Lab Paper [0/4]
+*** TODO Choose topic
+    DEADLINE: <2018-10-10 Wed>
+*** TODO Get sources [/]
+**** [ ]
+**** [ ]
+**** [ ]
+*** TODO Powerpoint
+    DEADLINE: <2018-11-25 Sun>
+*** TODO Paper
+    DEADLINE: <2018-12-02 Sun>
+
+* Exams
+** DONE Midterm Exam 1 
+   CLOSED: [2018-09-30 Sun 20:06] SCHEDULED: <2018-09-27 Thu>
+   - State "DONE"       from "TODO"       [2018-09-30 Sun 20:06]
+   - normal class time
+** TODO Midterm Exam 2
+   SCHEDULED: <2018-11-06 Tue>
 
