--- a/2018-fall/thermodynamics.org
+++ b/2018-fall/thermodynamics.org
@@ -1,10 +1,66 @@
 * Assignments
-** Homework
+** Homework [6/8]
 *** DONE HW2
     CLOSED: [2018-09-07 Fri 14:04] DEADLINE:<2018-09-07 Fri>
-** Reading
-*** DONE Chapter 2 Reading
-    CLOSED: [2018-09-09 Sun 22:18] DEADLINE:<2018-09-09 Sun>
+*** DONE HW3 
+    CLOSED: [2018-09-16 Sun 14:46] DEADLINE: <2018-09-14 Fri>
+*** DONE HW4 
+    CLOSED: [2018-09-24 Mon 12:32] DEADLINE: <2018-09-21 Fri>
+    - State "DONE"       from "TODO"       [2018-09-24 Mon 12:32]
+*** MISSED HW5
+    CLOSED: [2018-10-05 Fri 16:38] DEADLINE: <2018-09-28 Fri>
+    - State "MISSED"     from "TODO"       [2018-10-05 Fri 16:38]
+*** DONE HW6
+    CLOSED: [2018-10-05 Fri 16:38] DEADLINE: <2018-10-05 Fri>
+    - State "DONE"       from "TODO"       [2018-10-05 Fri 16:38]
+*** DONE HW7
+    CLOSED: [2018-10-15 Mon 12:26] DEADLINE: <2018-10-12 Fri>
+    - State "DONE"       from "TODO"       [2018-10-15 Mon 12:26]
+*** TODO HW8 
+    DEADLINE: <2018-10-19 Fri>
+*** TODO HW9
+    DEADLINE: <2018-10-26 Fri>
+
+** Reading [8/10]
+*** DONE Week 2 Reading
+    CLOSED: [2018-09-09 Sun 22:18] DEADLINE:<2018-09-02 Sun>
+*** MISSED Week 3 Reading 
+    CLOSED: [2018-09-17 Mon 15:00] DEADLINE: <2018-09-09 Sun>
+    - State "MISSED"     from "TODO"       [2018-09-17 Mon 15:00]
+*** DONE Week 4 Reading 
+    CLOSED: [2018-09-16 Sun 19:01] DEADLINE: <2018-09-16Sun>
+*** DONE Week 4 Reading
+    CLOSED: [2018-09-24 Mon 12:31] DEADLINE: <2018-09-23 Sun>
+    - State "DONE"       from "TODO"       [2018-09-24 Mon 12:31]
+*** DONE Week 5 Reading
+    CLOSED: [2018-09-30 Sun 20:03] DEADLINE: <2018-09-30 Sun>
+    - State "DONE"       from "TODO"       [2018-09-30 Sun 20:03]
+*** DONE Week 6 Reading
+    CLOSED: [2018-10-10 Wed 20:40] DEADLINE: <2018-10-07 Sun>
+    - State "DONE"       from "TODO"       [2018-10-10 Wed 20:40]
+*** DONE Week 7 Reading
+    CLOSED: [2018-10-08 Mon 12:35] DEADLINE: <2018-10-07 Sun>
+    - State "DONE"       from "TODO"       [2018-10-08 Mon 12:35]
+*** DONE Week 8 Reading
+    CLOSED: [2018-10-15 Mon 12:26] DEADLINE: <2018-10-14 Sun>
+    
+    - State "DONE"       from "TODO"       [2018-10-15 Mon 12:26]
+*** TODO Week 9 Reading
+    DEADLINE: <2018-10-21 Sun>
+*** TODO Week 10 Reading
+    DEADLINE: <2018-10-28 Sun>
+
+* Exams [1/3]
+** DONE Midterm Exam 1
+   CLOSED: [2018-09-26 Wed 10:51] SCHEDULED: <2018-09-24 Mon>
+   - State "DONE"       from "TODO"       [2018-09-26 Wed 10:51]
+   - 1830 W10 PBB
+** TODO Midterm Exam 2
+   DEADLINE: <2018-10-18 Thu>
+   - 1830 C20 PC
+** TODO Midterm Exam 3
+   DEADLINE: <2018-11-15 Thu>
+   - 1830 C20 PC
 * Notes
 ** Mechanical energy of flow of fluid
 ** Heat :: form of energy hat is transferred by temp difference
