update before resetting laptop

--- a/2019-spring/schedule.org
+++ b/2019-spring/schedule.org
@@ -11,3 +11,4 @@
 ** Zenburn ;; great -- really good 
 ** Wombat ;; Very nice bad highlight though 
 ** Wilson ;; very nice bad highlight though
+** Noctilux ;; minty, no bad highlight
